--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,17 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Executables
+test0
+test1
+test2
+
+# USLOSS
+usloss/*
+
+# vs code stuff
+*.code*
+.vscode
+.vs
+
